Add register Router and user data base logic
implement User module as a mongoose schema for users
add register Route that handle get request and render registration page as a response and POST request that take user name and password from user (make sure it is unique and insert it to data base )
send a response for that post request as variable to registration.ejs to view a message for user as a response for his input either registration is successful or user name is not unique

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-image: url("background1.jpg");
+          
             background-repeat: no-repeat;
             background-size: 100%;
         }
@@ -32,7 +32,7 @@
         <h1>Welcome</h1>
     </div>
     <div class="cont">
-        <form method="POST">
+        <form method="POST" action = "/login">
             Username:<br>
             <input type="text" name="username">
             <br>
@@ -42,7 +42,7 @@
             <input type="submit" value="Login">
         </form>
         <br>
-        <a href="registration">I dont have an account</a>
+        <a href="register">I dont have an account</a>
     </div>
 </body>
 </html>
