Fix bug with login page and routing
1)fix a bug with login page change variables passed to compareSync() function to be the password user entered with password stored in data base
2) fix routing to home page from login page using redirect() method instead of render() and pass variables as query

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,7 +35,7 @@
       <h1>Welcome</h1>
     </div>
     <div class="cont">
-      <form method="POST" action="/login">
+      <form method="POST" action="/">
         Username:<br />
         <input type="text" name="username" />
         <br />
