--- a/views/home.ejs
+++ b/views/home.ejs
@@ -70,7 +70,7 @@
     </nav>
 
     <div class="container">
-        <h1>Welcome</h1>
+        <h1>Welcome <%=userName%></h1>
     </div>
     <div class="container1">
         <img id="image" src="/phones.png" width="100" height="100">
