--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        background-image: url('background3.jpg');
+        background-image: url('images/background3.jpg');
         background-repeat: no-repeat;
         background-size: 100%;
       }
@@ -89,45 +89,27 @@
     <div class="container">
       <h1>Welcome</h1>
     </div>
-    <div class="container1">
-      <img id="image" src="images/phones.png" width="100" height="100" />
+    <% for (var i = 0; i < categories.length; i++) {%>
+    <div class="container<%=i+1%>">
+      <img
+        id="image"
+        src="<%= categories[i].image_src%> "
+        alt="<%= categories[i].name%>"
+        width="100"
+        height="100"
+      />
       <br />
-      <label class="ml-4 my-2">Phones</label>
+      <label class="ml-4 my-2"><%=categories[i].name%></label>
       <br />
       <button
-        onclick="location.href = '/phones';"
-        id="phones"
+        onclick="location.href = '/category/<%=categories[i].name%>';"
+        id="<%=categories[i].name%>"
         class="btn btn-secondary ml-3"
       >
         View
       </button>
     </div>
-    <div class="container2">
-      <img id="image" src="/books.png" width="100" height="100" />
-      <br />
-      <label class="ml-4 my-2">Books</label>
-      <br />
-      <button
-        onclick="location.href = '/books';"
-        id="books"
-        class="btn btn-secondary ml-3"
-      >
-        View
-      </button>
-    </div>
-    <div class="container3">
-      <img id="image" src="/sports.png" width="100" height="100" />
-      <br />
-      <label class="ml-4 my-2">Sports</label>
-      <br />
-      <button
-        onclick="location.href = '/sports';"
-        id="sports"
-        class="btn btn-secondary ml-3"
-      >
-        View
-      </button>
-    </div>
+    <% } %>
     <div class="cart">
       <button
         onclick="location.href = '/cart';"
