--- a/views/home.ejs
+++ b/views/home.ejs
@@ -93,7 +93,7 @@
     <div class="container<%=i+1%>">
       <img
         id="image"
-        src="<%= categories[i].image_src%> "
+        src="<%= categories[i].imageSrc%> "
         alt="<%= categories[i].name%>"
         width="100"
         height="100"
