--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,7 +35,7 @@
       <h1>Welcome</h1>
     </div>
     <div class="cont">
-      <form method="POST" action="/">
+      <form method="POST" action="/login">
         Username:<br />
         <input type="text" name="username" />
         <br />
