Fix bug in home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -87,8 +87,7 @@
     </nav>
 
     <div class="container">
-      <h1>Welcome<%=userName%></h1>
-
+      <h1>Welcome</h1>
     </div>
     <% for (var i = 0; i < categories.length; i++) {%>
     <div class="container<%=i+1%>">
