Fix home page to grant access
update home screen to redirect to login page if the user did not logged in

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        background-image: url('background2.jpg');
+        background-image: url('images/background2.jpg');
         background-repeat: no-repeat;
         background-size: 100%;
       }
