--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
   <head>
     <style>
       body {
+        background-image: url('images/background1.jpg');
         background-repeat: no-repeat;
         background-size: 100%;
       }
