--- a/views/category.ejs
+++ b/views/category.ejs
@@ -104,7 +104,7 @@
       >
       <br />
       <button
-        onclick="location.href = '/product/<%=category.products[i].name%>';"
+        onclick="location.href = '/product/<%=category.products[i]._id%>';"
         id="<%=category.products[i].name%>"
         class="btn btn-secondary ml-3"
       >
