--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,7 +46,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Products</title>
+    <title>Home</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -87,7 +87,7 @@
     </nav>
 
     <div class="container">
-      <h1>Welcome<%=userName%></h1>
+      <h1>Welcome <%=userName%></h1>
     </div>
     <% for (var i = 0; i < categories.length; i++) {%>
     <div class="container<%=i+1%>">
