fix: search term regex
removed '^' to allow searching for substrings.

--- a/views/searchresults.ejs
+++ b/views/searchresults.ejs
@@ -75,7 +75,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto"></ul>
-        // TODO: do not accept empty input
+        <!-- TODO: do not accept empty input -->
         <form method="POST" action="/search" class="form-inline my-2 my-lg-0">
           <input
             class="form-control mr-sm-2"
