Refactor routes and views
changed background images' names to self-explanatory names and replaced
all http status codes to constants.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        background-image: url('images/background3.jpg');
+        background-image: url('images/black-background.jpg');
         background-repeat: no-repeat;
         background-size: 100%;
       }
