Add required to input fields and handle empty search

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,10 +38,10 @@
     <div class="cont">
       <form method="POST" action="/login">
         Username:<br />
-        <input type="text" name="username" />
+        <input type="text" name="username" required />
         <br />
         Password:<br />
-        <input type="password" name="password" />
+        <input type="password" name="password" required/>
         <br /><br />
         <input type="submit" value="Login" />
       </form>
