--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -39,9 +39,9 @@
     <div class="cont">
       <form method="post" action="/register">
         Username: <br />
-        <input type="text" id="user" name="username" /> <br />
+        <input type="text" id="user" name="username" required/> <br />
         Password: <br />
-        <input type="password" id="password" name="password" /> <br />
+        <input type="password" id="password" name="password" required/> <br />
         <br />
         <input
           type="submit"
