Fix bug in show result set when search have no results

--- a/views/searchresults.ejs
+++ b/views/searchresults.ejs
@@ -65,7 +65,7 @@
     </nav>
     <div class="container">
         <% if (results.length == 0) {%>
-            <p style ={color:white !important}>no items found </p>
+            <p style ="color:white !important">no items found </p>
         <% }%>    
       <div class="row">
         <% for (var i = 0; i < results.length; i++) { %>
