Fix cart features
removed the quantity feature the uni said so :(,
displayed an error message if the item was already in cart

Co-authored-by: Abdulaziz Hassan <abdulazizhza@gmail.com>
Co-authored-by: Ahmed Nasser <ahmednasser217217@gmail.com>

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -85,7 +85,11 @@
         </form>
       </div>
     </nav>
-
+    <div class="alert alert-danger" role="alert" style="display: <%=locals.display%>;"
+                                id="cart-alert">
+                                <i class="fas fa-exclamation-triangle"></i> Item Already in Cart
+                              </div>
+            <% locals.app.locals.display = 'none' %>
     <div class="container">
       <h1>Welcome <%=userName%></h1>
     </div>
