--- a/views/searchresults.ejs
+++ b/views/searchresults.ejs
@@ -83,7 +83,7 @@
           >
           <br />
           <button
-            onclick="location.href = '/product/<%=results[i].name%>';"
+            onclick="location.href = '/product/<%=results[i]._id%>';"
             id="<%=results[i].name%>"
             class="btn btn-secondary ml-3"
           >
