Fix bug in search
nasser destroyed the repo to put icon,
fixed names from the other pages.

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -68,7 +68,7 @@
         <form method="POST" action="/search" class="form-inline my-2 my-lg-0">
           <input
             class="form-control mr-sm-2"
-            name="Search"
+            name="searchTerm"
             type="search"
             placeholder="Search"
             aria-label="Search"
