--- a/views/category.ejs
+++ b/views/category.ejs
@@ -74,7 +74,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto"></ul>
       <form method="POST" action="/search" class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" name="Search" type="search" placeholder="Search" aria-label="Search" />
+        <input class="form-control mr-sm-2" name="searchTerm" type="search" placeholder="Search" aria-label="Search" />
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
           Search
         </button>
