Add validation for the search
our alphapet is sigma plus not stat

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -72,6 +72,7 @@
             type="search"
             placeholder="Search"
             aria-label="Search"
+            required
           />
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
             Search
